# python-serato-crates

./: .gitignore  README.md  pyproject.toml
docs/: api_reference.rst  conf.py  index.rst
serato_crate/: __init__.py  crate_file.py  serato_crate.py
tests/: test_serato_crate.py
